k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: desenvolvimento
  labels:
    environment: development
    project: assistente-juridico
    managed-by: gitlab-agent
spec: {}
